completed with caching bugs

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,10 +14,16 @@ dependencies:
   provider: ^5.0.0
   dio: ^4.0.0
   pretty_dio_logger: ^1.1.1
+  mqtt_client: ^9.5.0
+  hive: ^2.0.4
+  hive_flutter: ^1.1.0
+  path_provider: ^2.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  hive_generator: ^1.1.0
+  build_runner: ^2.1.1
 
 flutter:
   uses-material-design: true
